# mnist_cpp

./: .gitignore  CMakeLists.txt  Makefile
include/: math.hpp  mnist_loader.h
src/: main.cpp  mnist_loader.cpp
